<?xml version="1.0"?>
<package>
  <name>libcreate</name>
  <version>1.2.0</version>
  <description>C++ library for interfacing with iRobot's Create 1 and Create 2</description>

  <maintainer email="jperron@sfu.ca">Jacob Perron</maintainer>

  <license>BSD</license>

  <!--url type="website">http://wiki.ros.org/ca_driver</url-->
  
  <author email="jperron@sfu.ca">Jacob Perron</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
